--- a/.github/workflows/pull_request-debug.yml
+++ b/.github/workflows/pull_request-debug.yml
@@ -30,5 +30,5 @@ jobs:
     steps:
       - uses: dustindortch/github-action-explore-debug@main
         with:
-          jq_selector: "."
+          jq_selector: "[.commits[]]"
 ...
