--- a/.github/workflows/pull_request-debug.yml
+++ b/.github/workflows/pull_request-debug.yml
@@ -31,4 +31,10 @@ jobs:
       - uses: dustindortch/github-action-explore-debug@main
         with:
           jq_selector: "."
+
+
+      - id: output_head_sha
+        env:
+          HEAD_COMMIT: ${{ github.event.pull_request.head.sha }}
+        run: echo "${HEAD_COMMIT}"
 ...
